package case1;

public enum Status {

  ACTIVE, INACTIVE

}
